data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3588.wast
;; 7. **Invalid Recursion Depth**:    - **Test Description**: Call a function recursively until the call stack exceeds the allowable depth.    - **Constraint Checked**: Call stack depth management.    - **CFG Relevance**: Ensures CFG correctly handles deep recursion and traps when limits are breached.

(assert_invalid
  (module
    (func $recursive-call
      (call 0)
    )
  )
  "call stack exhausted"
)